fix collapsed menu item icon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,6 +59,16 @@ body {
   background: #002b14 !important;
   color: white !important;
 }
+:where(.css-dev-only-do-not-override-7t2xvq).ant-layout-sider
+  .ant-layout-sider-children
+  .ant-menu.ant-menu-inline-collapsed {
+  width: 54px !important;
+}
+
+li.ant-menu-item {
+  display: flex !important;
+  align-items: center;
+}
 
 ul#rc-menu-uuid-20638-2-\/subscription-popup {
   margin-left: 10px !important;
